@@ -18,6 +18,7 @@ diag = +Alien::nragent
 remove = strict
 remove = warnings
 remove = base
+remove = constant
 remove = Exporter
 remove = Carp
 remove = Time::HiRes
